<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="@dimen/_16sdp"
        tools:context=".ui.fragment.HomeFragment">

        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arimo_bold"
            android:text="@string/sneakership"
            android:textColor="@color/orange"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintBottom_toBottomOf="@id/ivSearch"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/ivSearch" />

        <ImageView
            android:id="@+id/ivSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/ic_search"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvPopular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/popular"
            android:textColor="@color/black"
            android:textSize="@dimen/_20ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvHeading" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato"
            android:text="@string/sort_by"
            android:textColor="@color/grey"
            android:textSize="@dimen/_14ssp"
            app:drawableEndCompat="@drawable/ic_down"
            app:layout_constraintBottom_toBottomOf="@id/tvPopular"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvPopular" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvSneakerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:paddingBottom="@dimen/_100sdp"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvPopular"
            app:spanCount="2"
            tools:listitem="@layout/item_sneaker"   />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>