<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.fragment.CartFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_bold"
                android:text="@string/cart"
                android:textColor="@color/orange"
                android:textSize="@dimen/_18ssp" />

        </androidx.appcompat.widget.Toolbar>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvCartList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:clipToPadding="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toolbar" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/rvCartList">

                    <TextView
                        android:id="@+id/tvPriceDetails"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:drawablePadding="@dimen/_5sdp"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/order_details"
                        android:textSize="@dimen/_16ssp"
                        app:drawableEndCompat="@drawable/ic_info"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:fontFamily="@font/lato"
                        android:text="@string/order_details"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPriceDetails" />

                    <TextView
                        android:id="@+id/tvTotal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:fontFamily="@font/lato"
                        android:text="@string/total"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@id/btnCheckout"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/btnCheckout" />

                    <TextView
                        android:id="@+id/tvTotalValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:fontFamily="@font/lato_bold"
                        android:textColor="@color/orange"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="@id/btnCheckout"
                        app:layout_constraintStart_toEndOf="@id/tvTotal"
                        app:layout_constraintTop_toTopOf="@id/btnCheckout" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnCheckout"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:backgroundTint="@color/orange"
                        android:fontFamily="@font/lato_bold"
                        android:text="@string/check_out"
                        app:cornerRadius="@dimen/_6sdp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvPrice" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>